# bot

./: .env-sample  Cargo.toml  README.md
src/: lightning.rs  main.rs
