[package]
name = "mostr"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Francisco Calderón <fjcalderon@gmail.com>"]

[dependencies]
anyhow = "1.0.66"
bitcoin_hashes = "0.11.0"
env_logger = "0.9.1"
nostr = { git = "https://github.com/grunch/nostr-rs.git", commit = "b3cb95620a3dab5850690e9e77d54b7647f1bfdb" }
secp256k1 = "0.24.1"
tungstenite = { version = "0.17.3", features = ["native-tls"] }
url = "2.3.1"
tonic_openssl_lnd = "0.2.0"
dotenv = "0.15.0"
regex = "1.7.0"
tokio = { version = "1.21.2", features = ["full"] }
